# after-visit-summary-agent

./: .env.sample  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: fhir_client.py  llm.py  main.py  rag.py  summarizer.py
data/med_kb/: lisinopril.md  medications.csv  metformin.md
data/mock_fhir/demo-patient-1/: Condition.json  Encounter.json  MedicationRequest.json  MedicationStatement.json  Patient.json
data/mock_fhir/demo-patient-2/: Condition.json  Encounter.json  MedicationRequest.json  MedicationStatement.json  Patient.json
data/transcripts/: visit1_raw.txt  visit2_raw.txt
outputs/: AVS_demo-patient-1.md  AVS_demo-patient-2.md
tests/: test_fhir_client.py
